# scistyles

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.py
scratch/: check_avail.py  try_import.py
src/scistyles/: __init__.py  core.py
src/scistyles/stylelib/: ACS_nano.mplstyle  PRL-hs.mplstyle  apl-sp.mplstyle  aps_sans-hs.mplstyle  nature_com-hs.mplstyle  optlett-sp.mplstyle  pnas-sp.mplstyle  presentation-sp.mplstyle
test/: test_scistyles.py
