[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scistyles"
authors = [{name = "Samuel Palato"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License"
]
dependencies = ["matplotlib"]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["pytest", "numpy", "flit"]

[project.urls]
Source = "https://github.com/spalato/scistyles"
